# moanyfans

./: .dockerignore  .gitignore  Dockerfile  SPEC.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/api/: .env.example  pyproject.toml
apps/api/app/: auth.py  config.py  db.py  main.py
apps/api/app/routers/: admin.py  auth.py  battles.py  claims.py  fixtures.py  health.py  leaderboards.py  me.py  media.py  moans.py  notifications.py  push.py  search.py  seo.py  share.py  tags.py  teams.py  users.py  waitlist.py
apps/api/app/services/: card_render.py  engagement.py  fixture_sync.py  handles.py  handles_seed.py  house_ai.py  llm.py  media.py  moderation.py  push.py  ratelimit.py  recap_gen.py  scheduler.py  seeder.py  sportsdb.py  tags.py
apps/web/: .env.example  .env.production  index.html  package-lock.json  package.json
infra/docker/: api.Dockerfile  nginx.conf  web.Dockerfile
infra/sql/: 0001_init.sql  0002_seed_teams.sql  0003_seed_guest_user.sql  0004_seed_house_accounts_and_moans.sql  0005_seed_fixtures.sql  0006_fixture_round.sql  0007_recaps_and_house_ai.sql  0008_moans_fixture_link.sql  0009_team_leagues_2025_26.sql  0010_user_avatar_style.sql  0011_follows.sql  0012_notifications.sql  0013_remove_cope_kind.sql  0014_moans_media.sql  0015_push_subscriptions.sql  0016_user_blocks.sql  0017_reply_count_soft_delete.sql  0018_user_mutes.sql  0019_seeder_house_accounts.sql  0020_waitlist.sql  0021_security_hardening.sql  0022_reserved_handles.sql  0023_handle_claims.sql  (+4 more)
src/: App.tsx  data.ts
(+31 files in other folders)
