[project]
name = "moanyfans-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "asyncpg>=0.30",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "redis>=5.2",
  "anthropic>=0.40",
  "structlog>=24.4",
  "pyjwt[crypto]>=2.10",
  "Pillow>=11.0",
  "python-multipart>=0.0.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC", "S", "T20", "RET", "SIM"]
ignore = ["S101"]
